--- a/style.css
+++ b/style.css
@@ -180,3 +180,14 @@ h1,h3{
         min-height: 40em;
     }
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
